fixed files REST interface

--- a/daic/www/templates/filelist.html
+++ b/daic/www/templates/filelist.html
@@ -24,7 +24,7 @@
         <div class="row">
             <div class="col-md-8 col-sm-8 col-xs-8"><div>
                 <input type="checkbox">
-                <a href="/v1/containers/{{container}}/files/${uuid}">${name}</a></div>
+                <a href="/v1/containers/{{container}}/files/${id}">${name}</a></div>
             </div>
             <div class="col-md-4 col-sm-4 col-xs-4">
                 <div  class="btn-group">
