--- a/daic/www/templates/layout.html
+++ b/daic/www/templates/layout.html
@@ -16,7 +16,8 @@
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
-                    <li><a href="/">List</a></li>
+                    <li><a href="/">Containers</a></li>
+                    <li><a href="/connectors">Connectors</a></li>
                 </ul>
             </div>
         </div>
